--- a/MagicSquare.ipynb
+++ b/MagicSquare.ipynb
@@ -3,26 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8297fc64",
+   "id": "0cb27f13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ortools.sat.python import cp_model\n",
-    "import numpy as np \n"
+    "from ortools.sat.python import cp_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1b50df91",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "296e2444",
+   "execution_count": 4,
+   "id": "b5cbcb22",
    "metadata": {},
    "outputs": [
     {
@@ -61,35 +52,26 @@
       "[3, 5, 7]\n",
       "[4, 9, 2]\n",
       "-------------------------\n",
-      "Status = OPTIMAL\n"
+      "Status = OPTIMAL\n",
+      "Number of solutions found: 8\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "class VarArraySolutionPrinter(cp_model.CpSolverSolutionCallback):\n",
     "    \"\"\"Print intermediate solutions.\"\"\"\n",
-    "\n",
     "    def __init__(self, variables):\n",
     "        cp_model.CpSolverSolutionCallback.__init__(self)\n",
     "        self.__variables = variables\n",
     "        self.__solution_count = 0\n",
-    "\n",
-    "\n",
     "    def on_solution_callback(self):\n",
     "        self.__solution_count += 1\n",
     "        N = int(np.sqrt(len(self.__variables)))\n",
-    "        #print(N)\n",
-    "        #print(self.__solution_count , [self.Value(self.__variables[i,j]) for (i,j) in self.__variables])\n",
     "        for r in range(1,1+N):\n",
     "            print([self.Value(self.__variables[i,j]) for (i,j) in self.__variables if i==r])\n",
     "        print('-------------------------')\n",
-    "            \n",
-    "\n",
     "    def solution_count(self):\n",
     "        return self.__solution_count\n",
-    "\n",
     "\n",
     "def SearchForAllSolutionsSampleSat(n):\n",
     "    \"\"\"Showcases calling the solver to search for all solutions.\"\"\"\n",
@@ -97,12 +79,7 @@
     "    model = cp_model.CpModel()\n",
     "\n",
     "    # Creates the variables.\n",
-    "    #n= 3\n",
-    "    M = int(n*(n*n+1)/2)\n",
-    "    #print(M)\n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "    M = int(n*(n*n+1)/2)    \n",
     "    rows = range(1,n+1)\n",
     "    cols = range(1,n+1)\n",
     "    x = {(i,j):model.NewIntVar(1, n**2, f\"x_{i}_{j}\") for i in rows for j in cols}\n",
@@ -111,18 +88,22 @@
     "    model.AddAllDifferent([x[i,j] for (i,j) in x])\n",
     "    \n",
     "    for r in rows:\n",
-    "        model.Add(sum([x[r,c] for c in cols]) == M )\n",
+    "        expressions = [x[r,c] for c in cols]\n",
+    "        model.Add(sum(expressions) == M )\n",
+    "        model.AddAllDifferent(expressions)\n",
+    "\n",
+    "        \n",
     "    for c in cols:\n",
-    "        model.Add(sum([x[r,c] for r in rows]) == M )\n",
+    "        expressions = [x[r,c] for r in rows]\n",
+    "        model.Add(sum(expressions) == M )\n",
+    "        model.AddAllDifferent(expressions)\n",
     "    \n",
     "    expressions_d = [x[r,c] for r in rows for c in cols if r==c]\n",
     "    model.Add(sum(expressions_d) == M ) \n",
     "    \n",
-    "    \n",
     "    expressions_ad = [x[r,c] for r in rows for c in cols if r==n-c+1]\n",
     "    model.Add(sum(expressions_ad) == M ) \n",
     "\n",
-    "        \n",
     "\n",
     "    # Create a solver and solve.\n",
     "    solver = cp_model.CpSolver()\n",
@@ -130,12 +111,12 @@
     "    # Enumerate all solutions.\n",
     "    solver.parameters.enumerate_all_solutions = True\n",
     "    # Solve.\n",
-    "    #\n",
+    "    \n",
     "    status = solver.Solve(model, solution_printer)\n",
     "    #status = solver.Solve(model)\n",
     "\n",
     "    print(f\"Status = {solver.StatusName(status)}\")\n",
-    "    #print(f\"Number of solutions found: {solution_printer.solution_count()}\")\n",
+    "    print(f\"Number of solutions found: {solution_printer.solution_count()}\")\n",
     "\n",
     "\n",
     "SearchForAllSolutionsSampleSat(3)"
@@ -144,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c800db1",
+   "id": "a9fd84df",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -152,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e70d11ad",
+   "id": "ec05a501",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -160,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b50748b",
+   "id": "bc58bd51",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -168,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c9c51d7",
+   "id": "bfd72d20",
    "metadata": {},
    "outputs": [],
    "source": []
