--- a/MagicSquare.ipynb
+++ b/MagicSquare.ipynb
@@ -7,12 +7,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ortools.sat.python import cp_model"
+    "from ortools.sat.python import cp_model\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "da398f2f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "b5cbcb22",
    "metadata": {},
    "outputs": [
@@ -125,31 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9fd84df",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec05a501",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc58bd51",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bfd72d20",
+   "id": "6e3fe293",
    "metadata": {},
    "outputs": [],
    "source": []
