--- a/MagicSquare.ipynb
+++ b/MagicSquare.ipynb
@@ -12,12 +12,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "da398f2f",
+   "cell_type": "markdown",
+   "id": "0eba02e8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "A magic square is a fascinating mathematical puzzle where numbers are arranged in a grid in such a way that the sum of the numbers in each row, column, and diagonal is the same. It's like a numerical crossword, where every row and column holds a unique combination of numbers, and the challenge lies in arranging the digits so that they magically add up to a constant sum. Magic squares come in various sizes and complexities, from simple 3x3 grids to larger, intricate puzzles. Solving a magic square requires both logic and creativity, making it a delightful and engaging mathematical challenge for enthusiasts of all ages.\n",
+    "M = n(n*n+1)/2"
+   ]
   },
   {
    "cell_type": "code",
@@ -134,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e3fe293",
+   "id": "0dff1b56",
    "metadata": {},
    "outputs": [],
    "source": []
