--- a/TeamMeeting.ipynb
+++ b/TeamMeeting.ipynb
@@ -98,7 +98,7 @@
     "    model = cp_model.CpModel()\n",
     "    \n",
     "    x = {(team,t):model.NewBoolVar(f\"x_{team}_{t}\") for team in Teams for t in Timeslots}\n",
-    "    over_pt = {(p,t):model.NewIntVar(0,2, f\"over_{p}_{t}\") for p in Individuals for t in Timeslots}\n",
+    "    over_pt = {(p,t):model.NewIntVar(0,len(Teams)-1, f\"over_{p}_{t}\") for p in Individuals for t in Timeslots}\n",
     "    \n",
     "    # Create the constraints.\n",
     "    for team in Teams:\n",
