--- a/Pyomo_dae.ipynb
+++ b/Pyomo_dae.ipynb
@@ -148,22 +148,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "CA4bEWblFjue",
-        "outputId": "756c2129-6e65-46e7-9d3e-15478c6bd910"
+        "outputId": "16db7f11-daa2-4504-cd91-782bebf141cd"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: Pyomo in /usr/local/lib/python3.10/dist-packages (6.6.2)\n",
-            "Requirement already satisfied: ply in /usr/local/lib/python3.10/dist-packages (from Pyomo) (3.11)\n",
+            "Collecting Pyomo\n",
+            "  Downloading Pyomo-6.6.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (12.7 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.7/12.7 MB\u001b[0m \u001b[31m75.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting ply (from Pyomo)\n",
+            "  Downloading ply-3.11-py2.py3-none-any.whl (49 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.6/49.6 kB\u001b[0m \u001b[31m5.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: ply, Pyomo\n",
+            "Successfully installed Pyomo-6.6.2 ply-3.11\n",
             "# ==========================================================\n",
             "# = Solver Results                                         =\n",
             "# ==========================================================\n",
@@ -186,7 +192,7 @@
             "  Termination condition: optimal\n",
             "  Id: 0\n",
             "  Error rc: 0\n",
-            "  Time: 0.5255370140075684\n",
+            "  Time: 0.4557507038116455\n",
             "# ----------------------------------------------------------\n",
             "#   Solution Information\n",
             "# ----------------------------------------------------------\n",
@@ -210,10 +216,10 @@
         "!pip install Pyomo\n",
         "!wget -N -q \"https://github.com/thomasfork/ipopt_linux/raw/main/ipopt-linux64.zip\"\n",
         "!unzip -o -q ipopt-linux64\n",
-        "opt = SolverFactory('ipopt', executable='/content/ipopt')\n",
         "\n",
         "from pyomo.environ import *\n",
         "from pyomo.dae import *\n",
+        "opt = SolverFactory('ipopt', executable='/content/ipopt')\n",
         "\n",
         "m = ConcreteModel()\n",
         "\n",
@@ -270,14 +276,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 3,
       "metadata": {
+        "id": "ZYXdcxc5Fjuf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "id": "ZYXdcxc5Fjuf",
-        "outputId": "3fd655e7-ab17-4f4a-958a-65eec64b2f5c"
+        "outputId": "637ecb68-9a44-433e-a764-d134d7b21508"
       },
       "outputs": [
         {
@@ -306,7 +312,7 @@
             "  Termination condition: optimal\n",
             "  Id: 0\n",
             "  Error rc: 0\n",
-            "  Time: 0.850247859954834\n",
+            "  Time: 0.10323977470397949\n",
             "# ----------------------------------------------------------\n",
             "#   Solution Information\n",
             "# ----------------------------------------------------------\n",
@@ -386,14 +392,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 4,
       "metadata": {
+        "id": "H8w2xP3CFjuf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "id": "H8w2xP3CFjuf",
-        "outputId": "b799557f-bbf1-4eca-8c03-ec9fed101822"
+        "outputId": "9ff129a3-aaf1-4fa6-9565-b38a6a4c2f48"
       },
       "outputs": [
         {
@@ -422,7 +428,7 @@
             "  Termination condition: optimal\n",
             "  Id: 0\n",
             "  Error rc: 0\n",
-            "  Time: 0.10052752494812012\n",
+            "  Time: 0.18706440925598145\n",
             "# ----------------------------------------------------------\n",
             "#   Solution Information\n",
             "# ----------------------------------------------------------\n",
@@ -473,7 +479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "mtBuCDREFjuf"
       },
@@ -482,7 +488,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "2J3ZhNaGFjuf"
       },
