--- a/VRP_Circuit_CP_Wiring_nocross.ipynb
+++ b/VRP_Circuit_CP_Wiring_nocross.ipynb
@@ -28,7 +28,10 @@
         "Developed by Alireza Soroudi\n",
         "alireza.soroudi@gmail.com\n",
         "\n",
-        "Linkedin News letter : https://www.linkedin.com/in/soroudi/"
+        "Linkedin News letter : https://www.linkedin.com/newsletters/optimization-in-open-source-6874020019009859585/\n",
+        "\n",
+        "Git hub: https://github.com/OptimizationExpert/Pyomo\n",
+        "\n"
       ],
       "metadata": {
         "id": "VvJL0bOSIm84"
