--- a/15_Puzzle_IBM_Git.ipynb
+++ b/15_Puzzle_IBM_Git.ipynb
@@ -11,6 +11,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## IBM Ponder This Challene\n",
+        "by Alireza.Soroudi @gmail.com\n",
+        "\n",
+        "https://research.ibm.com/haifa/ponderthis/challenges/March2024.html"
+      ],
+      "metadata": {
+        "id": "kWTPgEcyseKt"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
