--- a/Suguru_CP.ipynb
+++ b/Suguru_CP.ipynb
@@ -82,7 +82,7 @@
         "import matplotlib.patches as patches\n",
         "\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "#drive.mount('/content/drive')"
       ]
     },
     {
@@ -319,7 +319,7 @@
         "    x,y = cells[node]\n",
         "    if (y,x) not in given.items():\n",
         "      plt.text(x-0.1,7-y, s=str(v), fontsize=14, fontweight='bold', c='k')\n",
-        "      plt.savefig(f'/content/drive/My Drive/Colab Notebooks/img/rectangle_plot_{counter}.png')\n",
+        "      #plt.savefig(f'/content/drive/My Drive/Colab Notebooks/img/rectangle_plot_{counter}.png')\n",
         "      counter+=1\n",
         "\n",
         "\n",
