--- a/Secret_Santa_Circuit_Advanced_CP.ipynb
+++ b/Secret_Santa_Circuit_Advanced_CP.ipynb
@@ -23,6 +23,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Developed by Alireza Soroudi\n",
+        "alireza.soroudi@gmail.com\n",
+        "\n",
+        "Linkedin News letter : https://www.linkedin.com/newsletters/optimization-in-open-source-6874020019009859585/\n",
+        "\n",
+        "Git hub: https://github.com/OptimizationExpert/Pyomo\n"
+      ],
+      "metadata": {
+        "id": "aCnTTuUPRseQ"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "w_3yuwV8XtMF",
@@ -44,7 +58,7 @@
         "\n",
         "#plt.rcParams[\"figure.figsize\"] = (15,10)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -69,7 +83,7 @@
       "metadata": {
         "id": "CFwTJ91NUzn9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,7 +97,7 @@
       "metadata": {
         "id": "yU46bQJO2WvI"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -139,7 +153,7 @@
         "id": "-G9XX1IR8BQc",
         "outputId": "d4577a3a-09cd-4446-d58c-3dc54d10d121"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -180,7 +194,7 @@
         },
         "outputId": "16fd28cf-e36b-4d6a-b4fb-a2064a0d72b1"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,7 +219,7 @@
       "metadata": {
         "id": "hBS7ZGQMpvw8"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -239,7 +253,7 @@
         "id": "SWe_F2kvLWSE",
         "outputId": "23854ee2-7c6d-46e2-b8a3-f65480eb7c6b"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +304,7 @@
         "id": "giKbPxPsLWUq",
         "outputId": "f4d87007-e6f5-4eea-9ce7-2e913becda24"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -363,7 +377,7 @@
         "id": "YSvVPhQItc_I",
         "outputId": "27e3e7be-bbb7-4ba7-f75a-4ff40a103ed7"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,7 +461,7 @@
         "id": "qAICvJsftSPU",
         "outputId": "f79c28ed-76bc-41a6-99aa-8b30e1d784a4"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -529,7 +543,7 @@
         "id": "y0xkJ9rCuslG",
         "outputId": "52a71778-c190-41d6-fe5e-94af47bda04f"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
