--- a/Largest_box_CP.ipynb
+++ b/Largest_box_CP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5j5vi9n2IzKcJC1kCUpSG",
+      "authorship_tag": "ABX9TyMt6LAg3Dvf5VR0d4zDs9aa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,19 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/OptimizationExpert/Pyomo/blob/main/Largest_box_CP.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Developed by Alireza Soroudi alireza.soroudi@gmail.com\n",
+        "\n",
+        "Linkedin News letter : https://www.linkedin.com/newsletters/optimization-in-open-source-6874020019009859585/\n",
+        "\n",
+        "Git hub: https://github.com/OptimizationExpert/Pyomo"
+      ],
+      "metadata": {
+        "id": "-Cnst15njHkv"
+      }
     },
     {
       "cell_type": "code",
@@ -2589,6 +2602,13 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "eIbVo4m0jGVP"
+      }
     },
     {
       "cell_type": "code",
