--- a/Linkedin_CP_Puzzle.ipynb
+++ b/Linkedin_CP_Puzzle.ipynb
@@ -23,6 +23,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Developed by Alireza Soroudi\n",
+        "alireza.soroudi@gmail.com\n",
+        "\n",
+        "Linkedin News letter : https://www.linkedin.com/newsletters/optimization-in-open-source-6874020019009859585/\n",
+        "\n",
+        "Git hub: https://github.com/OptimizationExpert/Pyomo"
+      ],
+      "metadata": {
+        "id": "uAFN_QYBnmvs"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "w_3yuwV8XtMF",
@@ -472,6 +486,13 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "kgrhPumrnlXZ"
+      }
     }
   ]
 }
