--- a/Linkedin_CP_Puzzle.ipynb
+++ b/Linkedin_CP_Puzzle.ipynb
@@ -62,7 +62,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "w_3yuwV8XtMF",
-        "outputId": "5ae41d43-9f38-4a07-882f-4d371cb4c116",
+        "outputId": "6eb54847-0b16-4fbd-8bec-e5c633bdb45a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -78,7 +78,7 @@
         "import matplotlib.pyplot as plt # Data visualization\n",
         "#plt.rcParams[\"figure.figsize\"] = (15,10)"
       ],
-      "execution_count": 56,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,9 +128,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 430
         },
-        "outputId": "bf29906d-0c1f-434c-ef64-aed3931cf067"
+        "outputId": "6b591cb4-ae7a-4731-e96e-bc7e1f7be671"
       },
-      "execution_count": 57,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "display_data",
@@ -155,7 +155,7 @@
       "metadata": {
         "id": "yU46bQJO2WvI"
       },
-      "execution_count": 58,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -165,7 +165,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "12dbc3fc-ded9-4e60-80c7-f3168e724a9c"
+        "outputId": "5353d7ac-a966-4edd-e238-fcbe96aadcc3"
       },
       "source": [
         "class VarArraySolutionPrinter(cp_model.CpSolverSolutionCallback):\n",
@@ -194,31 +194,46 @@
         "for n in nodes:\n",
         "  expressions = [U[n]]+[U[c] for c in nodes if n!=c and (info[n][0] - info[c][0])**2 +(info[n][1] - info[c][1])**2<2]\n",
         "  model.AddAtMostOne(expressions)\n",
+        "  \"\"\"\n",
+        "  any two adjacent nodes can not both host queen\n",
+        "  \"\"\"\n",
         "\n",
         "for c in colors:\n",
         "  expressions = [U[n] for n in nodes if info[n][2] == c]\n",
         "  model.AddExactlyOne(expressions)\n",
+        "  \"\"\"\n",
+        "  each color has exactly one queen\n",
+        "  \"\"\"\n",
         "\n",
         "for x in range(1,10):\n",
         "  expressions = [U[n] for n in nodes if info[n][0] == x]\n",
         "  model.AddAtMostOne(expressions)\n",
+        "  \"\"\"\n",
+        "  each row has at most one queen\n",
+        "  \"\"\"\n",
         "\n",
         "for y in range(1,10):\n",
         "  expressions = [U[n] for n in nodes if info[n][1] == y]\n",
         "  model.AddAtMostOne(expressions)\n",
+        "  \"\"\"\n",
+        "  each column has at most one queen\n",
+        "  \"\"\"\n",
         "\n",
         "solver.parameters.enumerate_all_solutions = True\n",
         "solution_printer = VarArraySolutionPrinter(U)\n",
         "status = solver.Solve(model, solution_printer)\n",
-        "#solver.Solve(model)"
+        "print(f\"status = {solver.StatusName(status)}\")\n",
+        "print(f\"Number of solutions found: {solution_printer.solution_count()}\")"
       ],
-      "execution_count": 59,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1]\n"
+            "1 [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1]\n",
+            "status = OPTIMAL\n",
+            "Number of solutions found: 1\n"
           ]
         }
       ]
@@ -241,9 +256,9 @@
           "height": 430
         },
         "id": "aw7I7Iy-i4Dc",
-        "outputId": "78a95c45-a285-4bd9-d632-504a75521e32"
+        "outputId": "38415dcd-0563-46e9-d2c8-4302b5c9f68d"
       },
-      "execution_count": 60,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "display_data",
