--- a/CVRP_log.ipynb
+++ b/CVRP_log.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPb4SuZJ+oFYY2kcZW2cSuz",
+      "authorship_tag": "ABX9TyOUwNZ+tIV3lCYCz6lUfz2w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,9 +36,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XoUPzyu8ooe5",
-        "outputId": "379e3d36-5c84-4c54-b761-9901e03137bc"
+        "outputId": "287dccd9-c48d-4d0c-ea14-aa935004e4f8"
       },
-      "execution_count": 23,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,9 +129,7 @@
         "        total_load += route_load\n",
         "    print(f\"Total distance of all routes: {total_distance}m\")\n",
         "    print(f\"Total load of all routes: {total_load}\")\n",
-        "    print(dic_route)\n",
         "    for id,L in dic_route.items():\n",
-        "      #print(id,L)\n",
         "      df.loc[id,'route'] = L\n",
         "    return df\n",
         "\n",
@@ -206,9 +204,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rG6EYATiooh_",
-        "outputId": "22c7cf73-5527-41d6-d61b-7b81bcd72b69"
+        "outputId": "6300c4dd-add4-4383-8556-0b4a01fc86ad"
       },
-      "execution_count": 24,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,8 +214,7 @@
           "text": [
             "Objective: 6208\n",
             "Total distance of all routes: 6208m\n",
-            "Total load of all routes: 60\n",
-            "{0: [0, 4, 3, 1, 7, 0], 1: [0, 14, 16, 10, 9, 0], 2: [0, 12, 11, 15, 13, 0], 3: [0, 8, 2, 6, 5, 0]}\n"
+            "Total load of all routes: 60\n"
           ]
         }
       ]
@@ -233,9 +230,9 @@
           "height": 174
         },
         "id": "Mr0ntI_GrIiG",
-        "outputId": "7fd8fb00-e012-4643-c1b2-5bae7df6caea"
+        "outputId": "b2613ae6-af47-4c78-c23e-1481f915158c"
       },
-      "execution_count": 25,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -249,7 +246,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-44957cb0-ba39-4cfa-87ca-e1a1b475af93\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-825d36f0-8a23-4baa-ae3a-5acbc26dd36a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -294,7 +291,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-44957cb0-ba39-4cfa-87ca-e1a1b475af93')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-825d36f0-8a23-4baa-ae3a-5acbc26dd36a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -346,12 +343,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-44957cb0-ba39-4cfa-87ca-e1a1b475af93 button.colab-df-convert');\n",
+              "        document.querySelector('#df-825d36f0-8a23-4baa-ae3a-5acbc26dd36a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-44957cb0-ba39-4cfa-87ca-e1a1b475af93');\n",
+              "        const element = document.querySelector('#df-825d36f0-8a23-4baa-ae3a-5acbc26dd36a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -371,8 +368,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-0547c5db-c59d-4df6-a16c-eb4335ac1e46\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0547c5db-c59d-4df6-a16c-eb4335ac1e46')\"\n",
+              "<div id=\"df-b51cbfe6-1880-423f-b257-9ed867e14902\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b51cbfe6-1880-423f-b257-9ed867e14902')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -491,14 +488,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-0547c5db-c59d-4df6-a16c-eb4335ac1e46 button');\n",
+              "        document.querySelector('#df-b51cbfe6-1880-423f-b257-9ed867e14902 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_e83a30c6-9377-446d-886d-15d1d8d20de5\">\n",
+              "  <div id=\"id_e1c10045-d5bc-4807-a3be-1a890b2b3b5e\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -542,7 +539,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_e83a30c6-9377-446d-886d-15d1d8d20de5 button.colab-df-generate');\n",
+              "        document.querySelector('#id_e1c10045-d5bc-4807-a3be-1a890b2b3b5e button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -563,7 +560,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 28
         }
       ]
     }
