--- a/NEOS Pyomo.ipynb
+++ b/NEOS Pyomo.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "con_expr = 2 * model.x1 + 3 * model.x2 + 4 * model.x3 + 5 * model.x4 + 9 * model.x5 <= 20\n",
     "model.con = pe.Constraint(expr=con_expr)\n",
-    "model.obj = pe.Objective(expr=-model.x1-model.x2)\n",
+    "model.obj = pe.Objective(expr=-model.x1-model.x2, sense= minimize)\n",
     "\n",
     "solver_manager = pe.SolverManagerFactory('neos')\n",
     "\n",
