--- a/Pyomo_on_Google_Colab.ipynb
+++ b/Pyomo_on_Google_Colab.ipynb
@@ -30,7 +30,7 @@
       },
       "source": [
         "This note notebook shows how to install the basic pyomo package on Google Colab, and then demonstrates the subsequent installation and use of various solvers including\n",
-        "\n",
+        "* HIGHS\n",
         "* GLPK\n",
         "* COIN-OR CBC\n",
         "* COIN-OR Ipopt\n",
@@ -166,64 +166,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 211
         },
         "id": "HsTASLpi8sdg",
-        "outputId": "c47d4672-95c3-4d5f-fcf3-7994b8bc0016",
+        "outputId": "9af7ccd5-c5df-4884-bf9f-741117fe2c74",
         "pycharm": {}
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "# ==========================================================\n",
-            "# = Solver Results                                         =\n",
-            "# ==========================================================\n",
-            "# ----------------------------------------------------------\n",
-            "#   Problem Information\n",
-            "# ----------------------------------------------------------\n",
-            "Problem: \n",
-            "- Name: unknown\n",
-            "  Lower bound: 2600.0\n",
-            "  Upper bound: 2600.0\n",
-            "  Number of objectives: 1\n",
-            "  Number of constraints: 3\n",
-            "  Number of variables: 2\n",
-            "  Number of nonzeros: 5\n",
-            "  Sense: maximize\n",
-            "# ----------------------------------------------------------\n",
-            "#   Solver Information\n",
-            "# ----------------------------------------------------------\n",
-            "Solver: \n",
-            "- Status: ok\n",
-            "  Termination condition: optimal\n",
-            "  Statistics: \n",
-            "    Branch and bound: \n",
-            "      Number of bounded subproblems: 0\n",
-            "      Number of created subproblems: 0\n",
-            "  Error rc: 0\n",
-            "  Time: 0.005041837692260742\n",
-            "# ----------------------------------------------------------\n",
-            "#   Solution Information\n",
-            "# ----------------------------------------------------------\n",
-            "Solution: \n",
-            "- number of solutions: 0\n",
-            "  number of solutions displayed: 0\n",
-            "\n",
-            "Profit =  2600.0\n",
-            "\n",
-            "Decision Variables\n",
-            "x =  20.0\n",
-            "y =  60.0\n",
-            "\n",
-            "Constraints\n",
-            "Demand  =  20.0\n",
-            "Labor A =  80.0\n",
-            "Labor B =  100.0\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'SolverFactory' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-4084493998.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mSolverFactory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'glpk'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexecutable\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'/usr/bin/glpsol'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# display solution\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\nProfit = '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprofit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'SolverFactory' is not defined"
           ]
         }
       ],
@@ -241,6 +203,67 @@
         "print('Demand  = ', model.demand())\n",
         "print('Labor A = ', model.laborA())\n",
         "print('Labor B = ', model.laborB())"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- HIGHs"
+      ],
+      "metadata": {
+        "id": "XPsYyFEH6z92"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyomo import environ as pe\n",
+        "#opt = pe.SolverManagerFactory('neos')\n",
+        "!pip install highspy\n",
+        "opt = pe.SolverFactory(\"appsi_highs\")  # try also 'cbc', 'glpk', 'gurobi'\n",
+        "opt.solve(model).write()\n",
+        "\n",
+        "# display solution\n",
+        "print('\\nProfit = ', model.profit())\n",
+        "\n",
+        "print('\\nDecision Variables')\n",
+        "print('x = ', model.x())\n",
+        "print('y = ', model.y())\n",
+        "\n",
+        "print('\\nConstraints')\n",
+        "print('Demand  = ', model.demand())\n",
+        "print('Labor A = ', model.laborA())\n",
+        "print('Labor B = ', model.laborB())\n"
+      ],
+      "metadata": {
+        "id": "A-cehFXu6yrz",
+        "outputId": "38838360-e617-4682-b996-87fb9decbf89",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 245
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: highspy in /usr/local/lib/python3.12/dist-packages (1.11.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from highspy) (2.0.2)\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'model' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3180297681.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'pip install highspy'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mopt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSolverFactory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"appsi_highs\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# try also 'cbc', 'glpk', 'gurobi'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mopt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# display solution\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+          ]
+        }
       ]
     },
     {
