--- a/Clock_CP.ipynb
+++ b/Clock_CP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOBz7HS3unvM0q/1jhEWmc8",
+      "authorship_tag": "ABX9TyMtgraR7PKMiS0Os/tHx/WN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,15 +25,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/OptimizationExpert/Pyomo/blob/main/Clock_CP.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Hub location"
-      ],
-      "metadata": {
-        "id": "z9wL5y4U_-dI"
-      }
     },
     {
       "cell_type": "markdown",
@@ -127,7 +118,6 @@
       "cell_type": "code",
       "source": [
         "nodes = [n for n in range(1,1+12)]\n",
-        "\n",
         "links = [(n,n+1) for n in nodes if n+1 in nodes]\n",
         "links += [(1,12)]\n",
         "links"
@@ -137,9 +127,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4Xl2sojm8HPY",
-        "outputId": "d590d873-8c63-4a3b-be2d-c524b211f518"
+        "outputId": "835eefa5-f462-4f7f-f0be-c6c0152390e7"
       },
-      "execution_count": 2,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -160,7 +150,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 39
         }
       ]
     },
@@ -190,7 +180,8 @@
         "expr = [u[n]*n for n in nodes]\n",
         "model.Add( sum(expr) == 39 )\n",
         "\n",
-        "#model.Maximize()\n",
+        "#expr_of = [u[n] for n in nodes]\n",
+        "#model.Minimize( sum(expr_of) )\n",
         "solver.parameters.max_time_in_seconds = 5*60\n",
         "stat = solver.Solve(model)\n",
         "print( solver.status_name(stat) , solver.objective_value)"
@@ -200,9 +191,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b2276f83-1db8-417c-a7f8-f133314a5d3f"
+        "outputId": "dd245554-ccd8-401a-d8c8-1114cc4bf079"
       },
-      "execution_count": 35,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,16 +216,16 @@
         "\n",
         "for (i,j),v in flow.items():\n",
         "  if solver.Value(v):\n",
-        "    print(f'flow is {i} to {j} ', solver.Value(v))\n"
+        "    print(f'flow is {i} to {j} = ', solver.Value(v))\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "22OXKuar1Xq1",
-        "outputId": "b53ab54d-dd92-4bd0-cbf8-b24b5ef75ceb"
+        "outputId": "b2d9d789-f288-421e-8d12-e7beff04007a"
       },
-      "execution_count": 38,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,11 +238,11 @@
             "8 1\n",
             "9 1\n",
             "Source is at  8 1\n",
-            "flow is 5 to 4  1\n",
-            "flow is 6 to 5  2\n",
-            "flow is 7 to 6  3\n",
-            "flow is 8 to 7  4\n",
-            "flow is 8 to 9  1\n"
+            "flow is 5 to 4 =  1\n",
+            "flow is 6 to 5 =  2\n",
+            "flow is 7 to 6 =  3\n",
+            "flow is 8 to 7 =  4\n",
+            "flow is 8 to 9 =  1\n"
           ]
         }
       ]
